# ferrule

./: .gitignore  LICENSE  LSP_COMPLETION_SUMMARY.md  SETUP_LSP.md  build.zig  build.zig.zon  flake.nix  package-management.md  package.json  readme.md  state.md  turbo.json
examples/: arrays.fe  arrays_and_loops.fe  block_expr_test.fe  control_flow.fe  echo.fe  error_check.fe  error_propagation.fe  error_simple.fe  error_test.fe  erroring.fe  errors.fe  (+10 more)
tooling/zed/grammars/ferrule/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tooling/zed/grammars/ferrule/bindings/c/: tree-sitter-ferrule.pc.in
tooling/zed/grammars/ferrule/bindings/go/: binding.go  binding_test.go
tooling/zed/grammars/ferrule/bindings/node/: binding.cc  index.js
tooling/zed/grammars/ferrule/bindings/python/tests/: test_binding.py
tooling/zed/grammars/ferrule/bindings/python/tree_sitter_ferrule/: __init__.py  binding.c
tooling/zed/grammars/ferrule/bindings/rust/: build.rs  lib.rs
tooling/zed/grammars/ferrule/bindings/swift/TreeSitterFerrule/: ferrule.h
tooling/zed/grammars/ferrule/bindings/swift/TreeSitterFerruleTests/: TreeSitterFerruleTests.swift
tooling/zed/grammars/ferrule/examples/: hello.fe
tooling/zed/grammars/ferrule/queries/: folds.scm  highlights.scm  locals.scm  tags.scm  textobjects.scm
tooling/zed/grammars/ferrule/src/: grammar.json  node-types.json  parser.c
tooling/zed/grammars/ferrule/test/corpus/: declarations.txt  expressions.txt  statements.txt
(+160 files in other folders)
