[package]
name = "tree-sitter-ferrule"
description = "a modern systems language with explicit control"
version = "0.1.0"
authors = ["Karol Broda <me@karolbroda.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ferrule"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/karol-broda/ferrule"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
